Fix for itemEditor content clipped by table.

--- a/components/DataGrid/css/datagrid-default.css
+++ b/components/DataGrid/css/datagrid-default.css
@@ -24,5 +24,5 @@
 }
 .table {
     text-align: left;
-    contain: strict;
+    contain: layout;
 }
